--- a/Test Model.ipynb
+++ b/Test Model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/xlZEWtJYsdBUfHfwZosb",
+      "authorship_tag": "ABX9TyNDO2hpFJVHVOePm3d3phyy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,170 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "Drr4_y9Nntp6"
+        "id": "Drr4_y9Nntp6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3f5f5efa-6fdd-4691-d751-35e901de0552"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/sklearn/base.py:380: InconsistentVersionWarning: Trying to unpickle estimator SimpleImputer from version 1.8.0 when using version 1.6.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+            "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/base.py:380: InconsistentVersionWarning: Trying to unpickle estimator RobustScaler from version 1.8.0 when using version 1.6.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+            "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/base.py:380: InconsistentVersionWarning: Trying to unpickle estimator Pipeline from version 1.8.0 when using version 1.6.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+            "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/base.py:380: InconsistentVersionWarning: Trying to unpickle estimator OneHotEncoder from version 1.8.0 when using version 1.6.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+            "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/base.py:380: InconsistentVersionWarning: Trying to unpickle estimator ColumnTransformer from version 1.8.0 when using version 1.6.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+            "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/base.py:380: InconsistentVersionWarning: Trying to unpickle estimator ExtraTreeRegressor from version 1.8.0 when using version 1.6.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+            "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/base.py:380: InconsistentVersionWarning: Trying to unpickle estimator IsolationForest from version 1.8.0 when using version 1.6.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+            "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   user_id          event_time  event_type  amount transaction_country  \\\n",
+            "0    U1001 2026-03-01 09:00:00     deposit     500                  us   \n",
+            "1    U1001 2026-03-01 12:00:00         buy     200                  us   \n",
+            "2    U1001 2026-03-01 18:00:00  withdrawal     300                  us   \n",
+            "3    U1001 2026-03-02 09:30:00         buy     150                  us   \n",
+            "4    U2001 2026-03-01 10:00:00     deposit     800                  us   \n",
+            "5    U2001 2026-03-01 15:00:00        sell     300                  us   \n",
+            "6    U2001 2026-03-02 11:00:00  withdrawal     500                  us   \n",
+            "7    U9001 2026-03-03 01:10:00     deposit    1000                  us   \n",
+            "8    U9001 2026-03-03 01:12:00  withdrawal   25000                  sg   \n",
+            "9    U9001 2026-03-03 01:13:00  withdrawal   18000                  sg   \n",
+            "10   U9002 2026-03-04 22:00:00     deposit     600                  us   \n",
+            "11   U9002 2026-03-04 22:01:00  withdrawal   15000                  ru   \n",
+            "12   U3001 2026-03-05 09:00:00     deposit     700                  us   \n",
+            "13   U3001 2026-03-05 13:30:00         buy     250                  us   \n",
+            "14   U3001 2026-03-05 19:00:00  withdrawal     400                  us   \n",
+            "15   U4001 2026-03-05 10:00:00     deposit     900                  us   \n",
+            "16   U4001 2026-03-05 14:00:00        sell     500                  us   \n",
+            "17   U4001 2026-03-05 18:30:00  withdrawal     600                  us   \n",
+            "18   U9101 2026-03-06 00:10:00     deposit    1200                  us   \n",
+            "19   U9101 2026-03-06 00:12:00  withdrawal   22000                  cn   \n",
+            "20   U9101 2026-03-06 00:13:00  withdrawal   17000                  cn   \n",
+            "21   U9202 2026-03-07 21:00:00     deposit     650                  us   \n",
+            "22   U9202 2026-03-07 21:01:00  withdrawal   14000                  br   \n",
+            "\n",
+            "    failed_login_1h  new_ip_1d  anomaly_score  is_anomaly  \n",
+            "0                 0          0      -0.028737           0  \n",
+            "1                 0          0      -0.026791           0  \n",
+            "2                 0          0      -0.033618           0  \n",
+            "3                 0          0      -0.035938           0  \n",
+            "4                 0          0      -0.029133           0  \n",
+            "5                 0          0      -0.042148           0  \n",
+            "6                 0          0      -0.040128           0  \n",
+            "7                 0          0      -0.029381           0  \n",
+            "8                10          1       0.061760           1  \n",
+            "9                12          1       0.070012           1  \n",
+            "10                0          0      -0.027901           0  \n",
+            "11                8          1       0.050196           1  \n",
+            "12                0          0      -0.027727           0  \n",
+            "13                0          0      -0.030224           0  \n",
+            "14                0          0      -0.031597           0  \n",
+            "15                0          0      -0.028910           0  \n",
+            "16                0          0      -0.036819           0  \n",
+            "17                0          0      -0.029969           0  \n",
+            "18                0          0      -0.028076           0  \n",
+            "19               11          1       0.093010           1  \n",
+            "20               14          1       0.098757           1  \n",
+            "21                0          0      -0.028018           0  \n",
+            "22                7          1       0.082009           1  \n"
+          ]
+        }
+      ],
+      "source": [
+        "import joblib\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from scipy.stats import median_abs_deviation\n",
+        "\n",
+        "artifact = joblib.load(\"behavior_iforest.pkl\")\n",
+        "model = artifact[\"model\"]\n",
+        "threshold = artifact[\"threshold\"]\n",
+        "\n",
+        "test_df = pd.read_csv(\"test_transactions 2.csv\")\n",
+        "test_df[\"event_time\"] = pd.to_datetime(test_df[\"event_time\"])\n",
+        "\n",
+        "test_df[\"amount_abs\"] = test_df[\"amount\"].abs()\n",
+        "\n",
+        "grp = test_df.groupby(\"user_id\", sort=False)\n",
+        "\n",
+        "# Rolling windows (15 transactions minimum, 7 transactions at least to compute)\n",
+        "test_df[\"amt_roll_med_15\"] = grp[\"amount_abs\"].transform(lambda s: s.rolling(15, min_periods=7).median())\n",
+        "\n",
+        "# Rolling MAD\n",
+        "test_df[\"amt_roll_mad_15\"] = grp[\"amount_abs\"].transform(lambda s: s.rolling(15, min_periods=7).apply(\n",
+        "    lambda x: median_abs_deviation(x, scale=\"normal\"), raw=False\n",
+        "))\n",
+        "\n",
+        "test_df[\"amt_dev_from_med\"] = test_df[\"amount_abs\"] - test_df[\"amt_roll_med_15\"]\n",
+        "test_df[\"amt_robust_z\"] = test_df[\"amt_dev_from_med\"] / (test_df[\"amt_roll_mad_15\"] + 1e-9)\n",
+        "\n",
+        "test_df[\"prev_event_time\"] = grp[\"event_time\"].shift(1)\n",
+        "# Gap between consecutive transactions (in seconds)\n",
+        "test_df[\"gap_seconds\"] = (test_df[\"event_time\"] - test_df[\"prev_event_time\"]).dt.total_seconds()\n",
+        "\n",
+        "# Fill first-transaction gaps\n",
+        "test_df[\"gap_seconds\"] = test_df[\"gap_seconds\"].fillna(test_df[\"gap_seconds\"].median())\n",
+        "\n",
+        "# Log-scaled time gap\n",
+        "test_df[\"gap_log\"] = np.log1p(test_df[\"gap_seconds\"])\n",
+        "\n",
+        "test_df[\"deposit_to_income_ratio\"] = (test_df[\"account_deposit\"] / (test_df[\"declared_income\"] + 1e-9))\n",
+        "\n",
+        "test_df[\"amount_to_income_ratio\"] = (test_df[\"amount_abs\"] / (test_df[\"declared_income\"] + 1e-9))\n",
+        "\n",
+        "test_df[\"net_flow_1d\"] = test_df[\"amount_in_1d\"] - test_df[\"amount_out_1d\"]\n",
+        "\n",
+        "test_df[\"failed_login_ratio_1h\"] = (test_df[\"failed_login_1h\"] / (test_df[\"login_count_1h\"] + 1e-9))\n",
+        "test_df[\"new_ip_1d\"] = test_df[\"new_ip_1d\"].fillna(0)\n",
+        "test_df[\"geo_change_1d\"] = test_df[\"geo_change_1d\"].fillna(0)\n",
+        "\n",
+        "test_df[\"is_cross_border\"] = (test_df[\"residence_country\"] != test_df[\"transaction_country\"]).astype(int)\n",
+        "\n",
+        "raw = model.decision_function(test_df)\n",
+        "test_df[\"anomaly_score\"] = -raw\n",
+        "test_df[\"is_anomaly\"] = (test_df[\"anomaly_score\"] >= threshold).astype(int)\n",
+        "\n",
+        "print(\n",
+        "    test_df[[\n",
+        "        \"user_id\", \"event_time\", \"event_type\",\n",
+        "        \"amount\", \"transaction_country\",\n",
+        "        \"failed_login_1h\", \"new_ip_1d\",\n",
+        "        \"anomaly_score\", \"is_anomaly\"\n",
+        "    ]]\n",
+        ")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "WYmMOf7woC7Y"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
